[B]1.5.3[/B]

- Mejoradas tanto la búsqueda en Google como la obtención de información extra

[B]1.5.2[/B]

- Añadida la capacidad de selección del mejor resultado en IMDB

[B]1.5.1[/B]

- Actualización de la búsqueda de información en IMDB

[B]1.5.0[/B]

- Añadida la búsqueda de información adicional buscando en cascada dentro de IMDB
- Añadida la selección de trailers de TheMovieDB (gracias XBMCERO)
- Añadida la selección de idioma para los posters de TheMovieDB (gracias XBMCERO)
- Revisada la descarga de póster de filmaffinity
- Añadida opción de descarga rápida de póster principal de filmaffinity (gracias XBMCERO)
- Añadida la descarga de póster y fanart the trackt.tv
- Añadido mostrar título original
- Mejorada la búsqueda principal usando la búsqueda de google
- Opciones de configuración revisadas y reordenadas (gracias XBMCERO y davidmuma)
- Priorizados los posters de otras páginas sobre los de filmaffinity en caso de ser seleccionados
- Eliminado soporte de Alpacine ya que la página ha dejado de funcionar

[B]1.4.5[/B]

- Añadida la posibilidad de descargar información de colecciones de TheMovieDB.

[B]1.4.4[/B]

- Mejorada la obtención de guionistas desde filmaffinity.
- Mejorada la obtención de productoras desde filmaffintiy.
- Corregido bug en descarga de primera productora cuando miniaturas de estudio está activo.
- Añadido soporte completamente funcional para descargas de posters de Alpacine.
- Eliminados todos los espacios en blanco extras en todos los textos descargados.

[B]1.4.3[/B]

- Mejorada la búsqueda para usar el año y corregidas limitaciones de búsqueda en google (gracias a Lechu)
- Mejorada la búsqueda de miniaturas y posters en filmaffinity (gracias a Lechu)
- Corregida, una vez más, la lectura de los votos de filmaffinity (gracias a Lechu)
- Corregida la descarga de sinopsis para ciertas películas (gracias a agjacome)
- Cambiado el icono de filmaffinity para que sea igual que el rediseño de su web (gracias Lechu)

[B]1.4.2[/B]
