@@ -1,3 +1,12 @@
+[B]1.5.5[/B]
+
+- Mejorada la búsqueda de títulos en filmaffinity con caracteres especiales
+- Mejorada la búsqueda de títulos en google permitiendo múltiples resultados
+
+[B]1.5.4[/B]
+
+- Mejorada la obtención de información extra (Top 250, calificación MPAA, eslogan, puntuación y número de votos) de IMDB
+
 [B]1.5.3[/B]
 
 - Mejoradas tanto la búsqueda en Google como la obtención de información extra
